# construct-typing

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml  python-publish.yml
construct-stubs/: __init__.pyi  core.pyi  debug.pyi  expr.pyi
construct-stubs/lib/: __init__.pyi  bitstream.pyi  containers.pyi  py3compat.pyi
construct_typed/: __init__.py  dataclass_struct.py  generic_wrapper.py  tenum.py
scripts/: expr_mixin_generator.py
tests/: __init__.py  declarativeunittest.py  test_core.py  test_typed.py  test_typed_pyright.py
