[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "construct-typing"
version = "0.8.0"
license = { file = "LICENSE" }
description="Extension for the python package 'construct' that adds typing features"
readme = "README.md"
authors = [{ name = "Tim Riddermann" }]
requires-python = ">=3.10"
keywords = [
    "construct",
    "kaitai",
    "declarative",
    "data structure",
    "struct",
    "binary",
    "symmetric",
    "parser",
    "builder",
    "parsing",
    "building",
    "pack",
    "unpack",
    "packer",
    "unpacker",
    "bitstring",
    "bytestring",
    "annotation",
    "type hint",
    "typing",
    "typed",
    "bitstruct",
    "PEP 561",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
dependencies = [
    "arrow>=1.0.0",
    "construct==2.10.70",
    "typing_extensions>=4.6.0"
]

[dependency-groups]
dev = [
    "poethepoet>=0.48.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "ty>=0.0.59",
    "setuptools>=83.0.0",
    "cloudpickle",  # optional "extra" from construct that the user may or may not have installed
    "cryptography",  # optional "extra" from construct that the user may or may not have installed
    "lz4",  # optional "extra" from construct that the user may or may not have installed
    "numpy",  # optional "extra" from construct that the user may or may not have installed
    "ruamel.yaml",  # optional "extra" from construct that the user may or may not have installed
]

[project.urls]
"Homepage" = "https://github.com/timrid/construct-typing"
"Bug Reports" = "https://github.com/timrid/construct-typing/issues"

[tool.setuptools]
packages=[
    "construct-stubs",
    "construct-stubs.lib",
    "construct_typed"
]

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".history",
    ".venv",
    ".venv*",
    "build",
    "dist",
    "libs",
]

# These warnings should be activated as "error" in the future, but for now we don't want to refactor the entire codebase right now.
# Valid values: "error", "warning", "information", "none"
reportInvalidTypeForm = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
# These "unnecessary isinstance" checks often enhance readability or increase the future-proofness of the code,
# since you can then explicitly "raise" for other types. So we don't want to complain about them.
reportUnnecessaryIsInstance = "none"

[tool.ty.src]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".history",
    ".venv",
    ".venv*",
    "build",
    "dist",
    "libs",
]

# These warnings should be activated as "error" in the future, but for now we don't want to refactor the entire codebase right now.
# Valid values: "error", "warn", "ignore"
[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-generic-class = "ignore"
invalid-legacy-type-variable = "ignore"
invalid-type-arguments = "ignore"
unused-type-ignore-comment = "ignore"

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"  # "full" | "concise" | "github" | "gitlab" | "junit"

[tool.ruff]
line-length = 140
indent-width = 4
output-format = "concise"  # "full" | "concise" | "grouped" | "json" | "junit" | "github" | "gitlab" | "pylint" | "azure"

[tool.ruff.lint]
allowed-confusables = ["×", "–", "‘", "’"]

# select = [] Use Default ruleset, cp. https://docs.astral.sh/ruff/rules/

# These warnings should be activated as "error" in the future, but for now we don't want to refactor the entire codebase right now.
ignore = [
     "E711",  # Comparison to `None` should be `cond is None`
     "E712",  # Avoid equality comparisons to `True`
     "E721",  # Use `is` and `is not` for type comparisons, or `isinstance()` for isinstance checks
     "E741",  # Ambiguous variable name: `...`
     "F403",  # `from ... import *` used; unable to detect undefined names
     "F405",  # `...` may be undefined, or defined from star imports
]

[tool.poe.tasks.typecheck]
sequence = [
    { cmd = "ruff check --fix --show-fixes" },
    { cmd = "ty check" },
    { cmd = "pyright" },
]
executor = {type = "uv", isolated = true}
