[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "construct-typing"
version = "0.8.0"
license = { file = "LICENSE" }
description="Extension for the python package 'construct' that adds typing features"
readme = "README.md"
authors = [{ name = "Tim Riddermann" }]
requires-python = ">=3.10"
keywords = [
    "construct",
    "kaitai",
    "declarative",
    "data structure",
    "struct",
    "binary",
    "symmetric",
    "parser",
    "builder",
    "parsing",
    "building",
    "pack",
    "unpack",
    "packer",
    "unpacker",
    "bitstring",
    "bytestring",
    "annotation",
    "type hint",
    "typing",
    "typed",
    "bitstruct",
    "PEP 561",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
dependencies = [
    "arrow>=1.0.0",
    "construct==2.10.70",
    "typing_extensions>=4.6.0"
]

[dependency-groups]
dev = [
    "poethepoet>=0.48.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "ty>=0.0.59",
    "setuptools>=83.0.0",
    "mypy>=2.3.0",
    "cloudpickle",  # optional "extra" from construct that the user may or may not have installed
    "cryptography",  # optional "extra" from construct that the user may or may not have installed
    "lz4",  # optional "extra" from construct that the user may or may not have installed
    "numpy",  # optional "extra" from construct that the user may or may not have installed
    "ruamel.yaml",  # optional "extra" from construct that the user may or may not have installed
]

[project.urls]
"Homepage" = "https://github.com/timrid/construct-typing"
"Bug Reports" = "https://github.com/timrid/construct-typing/issues"

[tool.setuptools]
packages=[
    "construct-stubs",
    "construct-stubs.lib",
    "construct_typed"
]

[tool.uv]
# mypy will only find the stubs from "construct-stubs" when using "compat" mode during development.
config-settings = { editable_mode = "compat" }

[tool.mypy]
strict = true
warn_unused_ignores = false
warn_redundant_casts = false
# This file is specifically designed to test that Pyright emits errors for invalid dataclass calls
# (via `# pyright: ignore[reportCallIssue]`). Mypy doesn't understand pyright's ignore comments, so
# it reports these intentionally-invalid calls as real errors. Exclude it from mypy checking.
exclude = ["tests/test_typed_pyright.py"]


[tool.pyright]
typeCheckingMode = "strict"
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".history",
    ".venv",
    ".venv*",
    "build",
    "dist",
    "libs",
]

# These warnings should be activated as "error" in the future, but for now we don't want to refactor the entire codebase right now.
# Valid values: "error", "warning", "information", "none"
reportInvalidTypeForm = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
# These "unnecessary isinstance" checks often enhance readability or increase the future-proofness of the code,
# since you can then explicitly "raise" for other types. So we don't want to complain about them.
reportUnnecessaryIsInstance = "none"

[tool.ty.src]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".history",
    ".venv",
    ".venv*",
    "build",
    "dist",
    "libs",
]

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"  # "full" | "concise" | "github" | "gitlab" | "junit"

[tool.ruff]
output-format = "concise"  # "full" | "concise" | "grouped" | "json" | "junit" | "github" | "gitlab" | "pylint" | "azure"

[tool.ruff.lint]
allowed-confusables = ["×", "–", "‘", "’"]
select = [
    "I"
]

[tool.poe.tasks.test]
cmd = "pytest $POE_EXTRA_ARGS"
executor = {type = "uv", isolated = true}

[tool.poe.tasks.lint]
cmd = "ruff check --fix --show-fixes"
executor = { type = "uv", isolated = true }

[tool.poe.tasks.lint-checkonly]
cmd = "ruff check"
executor = { type = "uv", isolated = true }

[tool.poe.tasks.ty]
cmd = "ty check"
executor = {type = "uv", isolated = true}

[tool.poe.tasks.pyright]
cmd = "pyright"
executor = {type = "uv", isolated = true}

[tool.poe.tasks.mypy]
cmd = "mypy tests construct_typed"
executor = {type = "uv", isolated = true}

[tool.poe.tasks.typecheck]
sequence = [
    "ty",
    "pyright",
    "mypy"
]

[tool.poe.tasks.check-all]
sequence = [
    "lint",
    "typecheck",
    "test",
]
